--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,12 +11,13 @@ steps:
   inputs:
     versionSpec: '8.x'
   displayName: 'Install Node.js'
+  
+  - script: npm install -g @angular/cli
+  displayName: 'install angular/cli'
 
 - script: |
     npm install
     npm run build
   displayName: 'npm install and build'
   
-  - script: |
-    npm test
-  displayName: 'npm test'
+ 
