--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,8 +15,9 @@ steps:
   
 
 - script: |
+    npm install -g @angular/cli
     npm install
-    npm run build
-  displayName: 'npm install and build'
+    ng test --browsers ChromeHeadless --watch false
+  displayName: 'npm install and test'
   
  
